<?xml version="1.0" encoding="utf-8"?>
<!-- VERSION 2: adding Floating-Label-for-EditText to New-Kospenuser-Form -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--tools:context="com.androidtutorialshub.floatinglabels.MainActivity">-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_ic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_ic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ic"
                android:inputType="text"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_kospenuser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_kospenuser_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_kospenuser_name"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!--BEGIN - adding Menu-Gender in EditText [FUNCTIONAL]-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_gender"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <!--END - adding Menu-Gender in EditText-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:singleLine="false"/>
        </android.support.design.widget.TextInputLayout>

        <!--BEGIN - adding DatePickerDialog in EditText [FUNCTIONAL]-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthday"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <!--END - adding DatePickerDialog in EditText-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_state"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_region"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_subregion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_subregion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_subregion"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_locality"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@color/colorPrimary"
            android:text="@string/text_sign_up"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_show_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@color/colorPrimary"
            android:text="@string/text_show_db"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_view_display_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="Kospenuser DB" />

    </LinearLayout>
</ScrollView>











<!-- VERSION 1: used when making 'tabs' with TabLayout & ViewPager -->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
    <!--android:background="#00796B"-->
<!--android:layout_height="match_parent">-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Fragment Three"-->
    <!--android:textSize="40dp"-->
    <!--android:textStyle="bold"-->
    <!--android:textColor="#fff"-->
    <!--android:layout_centerInParent="true"/>-->
<!--</RelativeLayout>-->