<?xml version="1.0" encoding="utf-8"?>
<!-- VERSION 2: adding Floating-Label-for-EditText to New-Kospenuser-Form -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_new_screening_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--tools:context="com.androidtutorialshub.floatinglabels.MainActivity">-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_ic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_ic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ic"
                android:inputType="text"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_weight"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_height"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_systolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_systolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_systolic"
                android:inputType="number"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_diastolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_diastolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_diastolic"
                android:inputType="number"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_dxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_dxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dxt"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:focusable="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_screening_smoker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_screening_smoker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_smoker"
                android:inputType="text"
                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>





        <Button
            android:id="@+id/button_screening_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@color/colorPrimary"
            android:text="@string/text_save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_show_db_screening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@color/colorPrimary"
            android:text="@string/text_show_db_screening"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_view_display_db_screening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="Screening DB" />

    </LinearLayout>
</ScrollView>























